--- a/notebooks/magnetism.ipynb
+++ b/notebooks/magnetism.ipynb
@@ -14,11 +14,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "Import the necessary packages and code to use magnetic layers."
+   "source": [
+    "Import the necessary packages and code to use magnetic layers."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -27,18 +31,20 @@
     "from hogben.models.samples import Sample\n",
     "from hogben.models.base import MagneticSLD\n",
     "from hogben.optimise import optimise_parameters"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "We can create a magnetic layer using the `MagneticSLD` module in HOGBEN. The syntax mostly works the same as ordinary layers in `refnx`, with the difference that the magnetic part of the SLD should be given as a second argument in `MagneticSLD`. If no magnetic SLD is provided, the magnetic SLD defaults to 0. In this example, we will create a simple sample with a magnetic reference layer (MRL)."
+   "source": [
+    "We can create a magnetic layer using the `MagneticSLD` module in HOGBEN. The syntax mostly works the same as ordinary layers in `refnx`, with the difference that the magnetic part of the SLD should be given as a second argument in `MagneticSLD`. If no magnetic SLD is provided, the magnetic SLD defaults to 0. In this example, we will create a simple sample with a magnetic reference layer (MRL)."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def simple_sample():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -64,46 +70,48 @@
     "    # Create a structure, separating each layer with a `|`\n",
     "    structure = air | layer3 | layer2 | layer1 | ref_layer_m | substrate\n",
     "    return structure"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "We can now create our sample using the `Sample` module, and the spin-states are handled automatically. "
+   "metadata": {},
+   "source": [
+    "We can now create our sample using the `Sample` module, and the spin-states are handled automatically. "
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_structure = simple_sample()\n",
     "magnetic_sample = Sample(sample_structure)\n",
     "magnetic_sample.reflectivity_profile()\n",
     "magnetic_sample.sld_profile()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "When initialising the sample, we can choose to turn the polarisation state on or off for the experiment. When the polarisation state is set to `False`, then the magnetic part of the SLD is not used at all. For example:"
+   "metadata": {},
+   "source": [
+    "When initialising the sample, we can choose to turn the polarisation state on or off for the experiment. When the polarisation state is set to `False`, then the magnetic part of the SLD is not used at all. For example:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "magnetic_sample = Sample(sample_structure, polarised=False)\n",
     "magnetic_sample.reflectivity_profile()\n",
     "magnetic_sample.sld_profile()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Setting instrument settings\n",
     "\n",
@@ -111,25 +119,27 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_structure = simple_sample()\n",
     "magnetic_sample = Sample(sample_structure, bkg=5e-6, dq=2, scale=1.2, polarised=False)\n",
     "magnetic_sample.reflectivity_profile()\n",
     "magnetic_sample.sld_profile()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "When no value is provided, a default value of `5e-6`, `2` and `1` will be used for the background, resolution and scaling respectively."
+   "metadata": {},
+   "source": [
+    "When no value is provided, a default value of `5e-6`, `2` and `1` will be used for the background, resolution and scaling respectively."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Setting instrument settings with multiple structures\n",
     "\n",
@@ -137,8 +147,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def simple_sample_two_structures():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -167,13 +179,11 @@
     "    structure_D2O = D2O | layer3 | layer2 | layer1 | ref_layer_m | substrate\n",
     "    \n",
     "    return [structure_H2O, structure_D2O]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The sample can be initiated as usual. If we want to use different settings for each structure, for instance using different backgrounds when measured in H2O as to measured in D2O, then the settings can be given as a list in the same order as the order in which the structures were given. Alternatively, a single value can be given to use the same value for each structure.\n",
     "\n",
@@ -181,16 +191,16 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_structure = simple_sample_two_structures()\n",
     "magnetic_sample = Sample(sample_structure, bkg=[2e-6, 4e-6], dq=2, scale=1.2, labels=['H2O Solvent', 'D2O Solvent'])\n",
     "magnetic_sample.reflectivity_profile()\n",
     "magnetic_sample.sld_profile()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,7 +216,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def simple_sample_MRL():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -255,18 +267,20 @@
     "    # Create a structure, separating each layer with a `|`\n",
     "    structure = air | layer3 | layer2 | layer1 | ref_layer_m | substrate\n",
     "    return structure"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now we can simply create a sample using the defined structure, and perform Fisher optimization using `optimise_parameters`."
+   "metadata": {},
+   "source": [
+    "Now we can simply create a sample using the defined structure, and perform Fisher optimization using `optimise_parameters`."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_structure = simple_sample_MRL()\n",
     "magnetic_sample = Sample(sample_structure, polarised=True)\n",
@@ -274,18 +288,20 @@
     "               (2.3, 100, 400),\n",
     "               ]    \n",
     "optimise_parameters(magnetic_sample, angle_times)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "We can do the same optimization as well for an unpolarised experiment, this can be simply done by initialising the sample with `polarised=False`, or alternatively setting `magnetic_sample.polarised = False` after it has been initialized. "
+   "source": [
+    "We can do the same optimization as well for an unpolarised experiment, this can be simply done by initialising the sample with `polarised=False`, or alternatively setting `magnetic_sample.polarised = False` after it has been initialized. "
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_structure = simple_sample_MRL()\n",
     "magnetic_sample = Sample(sample_structure, polarised=False)\n",
@@ -293,14 +309,12 @@
     "               (2.3, 100, 400),\n",
     "               ]\n",
     "optimise_parameters(magnetic_sample, angle_times)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Hogben",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
