Fixed protein notebook sample structure

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -1,27 +1,29 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "4289b9133a34e2bf",
+   "metadata": {},
    "source": [
     "# Optimization\n",
     "\n",
     "## Reference layer with simple sample"
-   ],
-   "id": "4289b9133a34e2bf"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "First import the necessary packages to describe a sample and perform optimization.",
-   "id": "4e3844c297d6765e"
+   "id": "4e3844c297d6765e",
+   "metadata": {},
+   "source": [
+    "First import the necessary packages to describe a sample and perform optimization."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -29,23 +31,24 @@
     "from refnx.analysis import Parameter\n",
     "from hogben.models.samples import Sample\n",
     "from hogben.optimise import optimise_parameters"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c0461ddee3aad7fe",
+   "metadata": {},
    "source": [
     "We need to define a structure to optimize, we do this using the `refnx` module.\n",
     "In this example, we're creating a structure consisting of a reference layer with three simple layers on top.\n",
     "We try to figure out what the best reference layer would be for this structure."
-   ],
-   "id": "c0461ddee3aad7fe"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c35aaf834b7d2e8c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def simple_sample():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -91,77 +94,83 @@
     "    # Create a structure, separating each layer with a `|`\n",
     "    structure = air | layer3 | layer2 | layer1 | ref_layer | substrate    \n",
     "    return structure"
-   ],
-   "id": "c35aaf834b7d2e8c",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now we have defined a structure, but we still need to put this into a HOGBEN sample using the `Sample` class.",
-   "id": "5e4ab0869b0dd6dc"
+   "id": "5e4ab0869b0dd6dc",
+   "metadata": {},
+   "source": [
+    "Now we have defined a structure, but we still need to put this into a HOGBEN sample using the `Sample` class."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1975519b1d2b87f3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "structure = simple_sample()\n",
     "sample = Sample(structure)"
-   ],
-   "id": "1975519b1d2b87f3",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "ece27272d2f48a3e",
+   "metadata": {},
    "source": [
     "Now we simple need define at what angles we measure, how long we measure, and how many data points we obtain at each angle.\n",
     "\n",
     "This is defined in a list for each angle, like `angle_times = [(angle, data_points, time), (angle2, data_points2, time2)]`"
-   ],
-   "id": "ece27272d2f48a3e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5753a6316f2069e6",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "angle_times = [(0.7, 100, 100),\n",
     "               (2.3, 100, 400),\n",
     "               ]    "
-   ],
-   "id": "5753a6316f2069e6",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now simply tell HOGBEN we want to optimize the parameters, we do this using `optimize_parameters`, giving the previously defined HOGBEN sample, and list of `angle_times` as input arguments:",
-   "id": "8fc6daaadbc2d321"
+   "id": "8fc6daaadbc2d321",
+   "metadata": {},
+   "source": [
+    "Now simply tell HOGBEN we want to optimize the parameters, we do this using `optimize_parameters`, giving the previously defined HOGBEN sample, and list of `angle_times` as input arguments:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "optimise_parameters(sample, angle_times)",
+   "execution_count": null,
    "id": "bda212bda1b87d51",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "optimise_parameters(sample, angle_times)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3914762d3655effb",
+   "metadata": {},
    "source": [
     "## Scaling importance\n",
     "\n",
     "We can also give different weights to parameters. This can simply be done by setting `parameter.importance` for a parameter like the example below. The default importance for parameters is equal to `1`. In this example, we scale the roughness of the layers by a factor of 2.\n"
-   ],
-   "id": "3914762d3655effb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fe86b663fe809f62",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def simple_sample_importance():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -212,20 +221,22 @@
     "    # Create a structure, separating each layer with a `|`\n",
     "    structure = air | layer3 | layer2 | layer1 | ref_layer | substrate    \n",
     "    return structure"
-   ],
-   "id": "fe86b663fe809f62",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now we can do the optimization again with the importance scaling as specified:",
-   "id": "eba47776ef8f82f0"
+   "id": "eba47776ef8f82f0",
+   "metadata": {},
+   "source": [
+    "Now we can do the optimization again with the importance scaling as specified:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e1290169d3fe468e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "structures = simple_sample_importance()\n",
     "sample = Sample(structures)\n",
@@ -233,26 +244,26 @@
     "               (2.3, 100, 400),\n",
     "               ]    \n",
     "optimise_parameters(sample, angle_times)"
-   ],
-   "id": "e1290169d3fe468e",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "b5362fc18ad223a2",
+   "metadata": {},
    "source": [
     "## Optimizing for solvent\n",
     "\n",
     "We can also optimize for a list of measurements at once. One typical example is when the same sample is measured twice in different solvents. In this case we can describe one structure for each measurement, and then optimize to the solvent SLD. When defining multiple measurements, the sample can be put in a list of structures.\n",
     "\n",
     "In this example, we imagine we have a structure consisting of three different layers on the substrate, measured in a certain solvent. We want to optimize the solvent SLD, such that we get most information possible about the SLD of each layer, the volume fraction of the solvent, and the structural properties of each layer. "
-   ],
-   "id": "b5362fc18ad223a2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "23fdc2026754fe22",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def solvent_sample():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -307,24 +318,24 @@
     "    structure2 = solvent2 | layer3 | layer2 | layer1 | substrate\n",
     "    \n",
     "    return [structure1, structure2]"
-   ],
-   "id": "23fdc2026754fe22",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "d7b8a83a931fc805",
+   "metadata": {},
    "source": [
     "Now just as we did previously, we simply put the above structure in a HOGBEN sample using `Sample`. Then we need to define the `angle_times` object and tell HOGBEN to optimise the parameters. \n",
     "\n",
     "By default the labels used in the legend are generated automatically, but a custom label can be set as well using a `labels` argument when defining the structure, as in the e xample below. The labels needs to be given as a list of strings, with one label for each structure."
-   ],
-   "id": "d7b8a83a931fc805"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "34f211ef2be27639",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "structures = solvent_sample()\n",
     "sample = Sample(structures, labels=[\"First solvent\", \"Second solvent\"])\n",
@@ -337,24 +348,24 @@
     "\n",
     "angle_times = [angle_times_1, angle_times_2]\n",
     "optimise_parameters(sample, angle_times)"
-   ],
-   "id": "34f211ef2be27639",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "b06ae9b5ff26d1dc",
+   "metadata": {},
    "source": [
     "## Setting different angle times for each solvent\n",
     "\n",
     "When we define different structures, like in the case above where we have two solvents, we may want to use a different set of `angle_times` for each structure. This is possible by submitting the `angle_times` object as a list with a different pair of `angle_times` for each structure like in the example below."
-   ],
-   "id": "b06ae9b5ff26d1dc"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "852fddcb934a1e93",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample = Sample(structures)\n",
     "angle_times_1 = [(0.7, 100, 100),\n",
@@ -365,24 +376,24 @@
     "               ] \n",
     "angle_times = [angle_times_1, angle_times_2]\n",
     "optimise_parameters(sample, angle_times)"
-   ],
-   "id": "852fddcb934a1e93",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "676a4855e84d26a2",
+   "metadata": {},
    "source": [
     "### Setting different background, scale or resolution for each solvent\n",
     "\n",
     "Likewise, we may want to have a different background or resolution for each structure. This can be done by providing the sample background, resolution or scaling as a list when creating the sample. Alternatively, a single value can be given for the background, scale or resolution. In that case, the same value will be used for all the structures. See the example below. "
-   ],
-   "id": "676a4855e84d26a2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbddb530d523fe0",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "structures = solvent_sample()\n",
     "angle_times = [(0.7, 100, 100),\n",
@@ -392,47 +403,51 @@
     "# Set different background, resolution and scale per structure\n",
     "sample_different = Sample(structures, bkg = [2e-6, 5e-7], dq = [2, 4], scale = [1, 1.5])\n",
     "optimise_parameters(sample_different, angle_times)"
-   ],
-   "id": "2cbddb530d523fe0",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "And to use the same background, resolution and scale for each structure just provide these as single values.",
-   "id": "24a1a37f24f35586"
+   "id": "24a1a37f24f35586",
+   "metadata": {},
+   "source": [
+    "And to use the same background, resolution and scale for each structure just provide these as single values."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ac10b2f7acac46c9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sample_same = Sample(structures, bkg = 2e-6, dq = 2, scale = 1)\n",
     "optimise_parameters(sample_same, angle_times)"
-   ],
-   "id": "ac10b2f7acac46c9",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "When no value is provided, a default value of `5e-6`, `2` and `1` will be used for the background, resolution and scaling respectively.",
-   "id": "ffd4056e60739d57"
+   "id": "ffd4056e60739d57",
+   "metadata": {},
+   "source": [
+    "When no value is provided, a default value of `5e-6`, `2` and `1` will be used for the background, resolution and scaling respectively."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3c531dd471d482ef",
+   "metadata": {},
    "source": [
     "## Optimising to both solvent and a reference layer\n",
     "\n",
     "We can combine any arbitrary set of parameters for the optimization. To add a reference layer, we would thus simply need to add another layer to the sample, and optimize for its properties. In this example, we assume the sample is measured in H2O first and then a second time in another solvent. We want to determine what the best reference layer would be, and in what contrast we should use for the second measurement."
-   ],
-   "id": "3c531dd471d482ef"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d7df5e2cd043e5a4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def solvent_ref_layer():\n",
     "    \"\"\"Define a bilayer sample, and return the associated refnx model\"\"\"\n",
@@ -491,20 +506,22 @@
     "    structure2 = solvent2 | layer3 | layer2 | layer1 | ref_layer | substrate\n",
     "    \n",
     "    return [structure1, structure2]"
-   ],
-   "id": "d7df5e2cd043e5a4",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now just as we did previously, we simply put the above structure in a HOGBEN sample using `Sample`. Then we need to define the `angle_times` object and tell HOGBEN to optimise the parameters.\n",
-   "id": "66aa068983ec9b49"
+   "id": "66aa068983ec9b49",
+   "metadata": {},
+   "source": [
+    "Now just as we did previously, we simply put the above structure in a HOGBEN sample using `Sample`. Then we need to define the `angle_times` object and tell HOGBEN to optimise the parameters.\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7df0f1ad78e9753a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "structures = solvent_ref_layer()\n",
     "sample = Sample(structures)\n",
@@ -512,29 +529,26 @@
     "               (2.3, 100, 400),\n",
     "               ]    \n",
     "optimise_parameters(sample, angle_times)"
-   ],
-   "id": "7df0f1ad78e9753a",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Hogben",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
